# connectit.chatit

./: .gitignore  PUBLISHING_GUIDE.md  README.md  README.md.backup  README_prev.txt  debug_output.txt  p2p_test_result.txt  pyproject.toml  tmp_node_before.txt
connectit/: __main__.py  auth.py  console.py  coordinator.py  dht.py  hf.py  jobs.py  nat.py  node.py  optim.py  p2p.py  p2p_runtime.py  protocol.py
connectit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: test_runner.py
tests/: __init__.py  commands.sh  test_dht.py  test_hf_optional.py  test_model.py  test_nat_optional.py  test_optim.py  test_p2p.py  test_pieces2.py  test_utils.py
